# UserOverride

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
profiles_api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
profiles_api/migrations/: 0001_initial.py
profiles_project/: settings.py
